--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
         <module>springboot-rabbitmq-learn</module>
     </modules>
 
+    <properties>
+        <mysql.version>8.0.33</mysql.version>
+        <druid.version>1.2.8</druid.version>
+        <mybaits-plus.version>3.5.3.1</mybaits-plus.version>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -21,6 +27,27 @@
                 <version>2.7.18</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <!-- MySQL -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+
+            <!-- Druid -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
+
+            <!-- mybatis-plus -->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybaits-plus.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
